--- a/example-1/style.css
+++ b/example-1/style.css
@@ -9,13 +9,40 @@ body{
 
 .wrapper{
     width: 100%;
-    max-width: 960px;
+    max-width: 960px; 
     margin: 0 auto;
 }
 
 /* menu base styles */
 
+nav{
+    background: #333;
+}
+nav ul{
+    list-style-type: none;
+    padding: 0;
+
+}
+nav a{
+    text-decoration: none;
+    color: #fff;
+    display: black;
+    padding: 10px;
+
+}
+nav a:hover{
+    background-color: #555
+}
 
 
 
 /* flex styles */
+
+@media screen and (min-width:768px){
+    nav ul{
+        display: flex;
+    }
+    nav li{
+        flex: 1 1 0;
+    }
+}
