--- a/style.css
+++ b/style.css
@@ -9,7 +9,25 @@ body{
 
 .wrapper{
     width: 100%;
-    max-width: 960px;
-    margin: 0 auto;
+    max-width: 1200px;
 }
+#blocks{
+    display:flex;
+    margin: 10px;
+    justify-content: space-between;
+}
+
+#blocks div{
+    flex: 0 0 100px;
+    padding: 40px 0;
+    text-align: center;
+    background: chocolate;
+
+}
+
+.one{order: 3};
+.two{order: 2;}
+.three{order: 1;}
+.four{order: 0;}
+
 
